Refactor voice chat UI & TTS; delete auth pages
Remove legacy login/register pages and several unused public assets; update package.json. Major refactor of the voice-chat page to new design tokens, responsive layout, and improved UX (auto-speak toggle, clearer state indicators, redesigned message/citation blocks). Enhance useVoice hook: add TTS chunking to avoid Chrome speechSynthesis timeouts, return a Promise from speak, preload voices, handle recognition edge cases, and add cleanup/resume safeguards. Minor bug fixes and styling updates across the voice experience.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "setup-db": "npx tsx scripts/setup-db.ts"
   },
   "dependencies": {
     "appwrite": "^22.4.1",
