--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "setup-db": "npx tsx scripts/setup-db.ts"
   },
   "dependencies": {
+    "@google/genai": "^1.43.0",
     "@gsap/react": "^2.1.2",
     "appwrite": "^22.4.1",
     "gsap": "^3.14.2",
